tests/snapshots/examples_fixtures/type_system__failing__183_hash_missing_colon.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/183_hash_missing_colon.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Hash Colon

This hash entry needs `:` between the key and value.

  examples/type_system/failing/183_hash_missing_colon.flx:1:15
  |
1 | let h = { "a" 1 }
  |               ^

Hint:
  Hash literals use `{key: value, ...}`.
== stdout ==
<not executed>
